# localscribe

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  setup.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
localscribe/: __init__.py  cli.py  config.py  log.py  text.py
localscribe/clips/: __init__.py  captions.py  cli.py  cut.py  detect.py  download.py  manifest.py  segment_transcribe.py  silence.py  transcript.py  waveform.py  web.py
localscribe/llm/: __init__.py  claude_cli.py  codex_cli.py  gemini_cli.py  openai_api.py
localscribe/stages/: __init__.py  align.py  diarize.py  download.py  identify.py  report.py  summarize.py  transcribe.py
tests/: test_clips_transcript.py  test_logic.py
